--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "mongoose": "^5.11.8",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
